// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FieldValueToggleGroupFilter render - active 1`] = `
Array [
  <EuiFilterButton
    color="text"
    hasActiveFilters={true}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    onClick={[Function]}
    type="button"
  />,
  <EuiFilterButton
    color="text"
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    onClick={[Function]}
    type="button"
  />,
]
`;

exports[`FieldValueToggleGroupFilter render - active negated - custom negated name 1`] = `
Array [
  <EuiFilterButton
    color="text"
    hasActiveFilters={true}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    onClick={[Function]}
    type="button"
  />,
  <EuiFilterButton
    color="text"
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    onClick={[Function]}
    type="button"
  />,
]
`;

exports[`FieldValueToggleGroupFilter render - active negated 1`] = `
Array [
  <EuiFilterButton
    color="text"
    hasActiveFilters={true}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    onClick={[Function]}
    type="button"
  />,
  <EuiFilterButton
    color="text"
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    onClick={[Function]}
    type="button"
  />,
]
`;

exports[`FieldValueToggleGroupFilter render 1`] = `
Array [
  <EuiFilterButton
    color="text"
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_0"
    onClick={[Function]}
    type="button"
  />,
  <EuiFilterButton
    color="text"
    hasActiveFilters={false}
    iconSide="right"
    key="field_value_toggle_filter_item_1"
    onClick={[Function]}
    type="button"
  />,
]
`;
